welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:2: error: identifier expected but 'var' found.
def move(var nbPas : int , var versLavant: Boolean) {
         ^Program:18: error: ':' expected but '}' found.
}
^