welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(var nbPas : int , var versLavant: Boolean) {
	var i = 0;
	if(versLavant){
		for(i<-0 to nbPas-1){
			avance();
		}
	}
	else{
		for(i<-0 to nbPas-1){
		recule();
		}
	}
}

